# chimera-logical-anomaly-detection

./: .gitignore  BEFORE_PUBLIC_RELEASE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
demos/: cifar10_forbidden_conjunction.py  compare_training_modes.py  mnist_forbidden_conjunction.py
demos/chimera_logic/: __init__.py  chimera.py  semantics.py
docs/: implementation_notes.md  reproducibility.md  source_mapping.md
experiments/clevrer/: README.md  train.py
experiments/openimages/: README.md  train.py
experiments/vidor/: README.md  train.py
research/logic_vae/: README.md  train_vae_probvalue.py
results/: README.md  table2.csv
scripts/: reproduce_mnist_demo.sh  smoke_test.sh
src/chimera_logic/: evaluator.py  trainer.py
tests/: test_chimera.py  test_graph_cache.py  test_semantics.py
