[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera-logical-anomaly-detection"
version = "0.1.0"
description = "Neuro-symbolic anomaly detection using operand-level Chimera training and neural logical rule graphs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alejandro Ascarate Castro"}]
keywords = ["neuro-symbolic AI", "anomaly detection", "logical reasoning", "counterfactual learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "Pillow>=10.0",
]

[project.optional-dependencies]
graph = ["dgl>=1.1"]
video = ["opencv-python>=4.8"]
dev = ["pytest>=8.0", "ruff>=0.5"]
all = ["dgl>=1.1", "opencv-python>=4.8", "pytest>=8.0", "ruff>=0.5"]

[project.urls]
Repository = "https://github.com/aleazk/Evaluator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
